src/assets/base.sass
@import "layout"

$background: whitesmoke !default
$default-font-size: 12pt !default
$default-font-color: black !default
$details-font-size: 0.82em !default
$details-color: lighten($default-font-color, 40%) !default
$time-color: lighten($default-font-color, 30%) !default
$time-font-size: 0.95rem !default
$contact-font-size: 0.95em !default
$title-font-size: 1.9em !default
$header-line-height: 2.2rem !default
$highlightColor: #17a095 !default
$padding-top: 0.75in
$padding-bottom: 0.75in
$padding-right: 0.75in
$padding-left: 0.75in

.wrapper
  .page
    padding-top: $padding-top
    padding-bottom: $padding-bottom
    padding-left: $padding-right
    padding-right: $padding-left
    box-sizing: border-box

html
  font-size: $default-font-size
  color: $default-font-color
body
  margin: 0
  padding: 0
  /*line-height: 1pt;*/
  text-rendering: optimizeLegibility
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale
  font-family: Garamond
  .background
    background-color: $background

  .main
    width: 100%
    height: 100%
    position: relative
    .profile
      display: flex
      width: 100%
      margin-bottom: 2.5rem
      position: relative
      .picture
        width: 1.5in
        overflow: visible
        img
          width: 1.1in
          height: 1.2in
          object-fit: contain
          margin-right: 0.6rem
          position: absolute
          top: -2rem

      .title
        position: relative
        text-transform: uppercase
        font-size: $title-font-size
        padding: 0

        .name
          font-weight: bold
          color: $highlightColor

        .role
          font-size: 0.55em
          font-style: italic

      .contact
        align-self: start
        margin-left: auto
        text-align: left
        text-transform: none
        font-size: $contact-font-size
    .section
      width: 100%
      position: relative
      margin-top: 0.4rem
      margin-bottom: 0

      .section-title
        font-size: 1.05em
        margin-bottom: 0.25rem

        .icon
          position: absolute
          right: 100%
          margin-right: 0.2em
          top: 0.1em
          min-width: 1em
          width: 1.18em
        span
          text-transform: uppercase
          font-weight: bold
          color: $highlightColor
          border-top: 1px solid
          border-bottom: 1px solid
          display: inline-block
          width: 100%
    .timeline
      position: relative
      //left: 0.375in
      .item
        .place
          position: relative

          &::before
            content: " "
            background-color: whitesmoke
            position: absolute
            display: inline-block
            $circle-size: 0.7rem
            width: $circle-size
            height: $circle-size
            border-radius: 999999px
            z-index: 1
            border: 0.065cm solid black
            top: 0
            bottom: 0
            margin: auto 0
            left: -1.42rem
            $pointSpace: 0.35rem
            box-shadow: 0 $pointSpace 0 whitesmoke, 0 calc(#{$pointSpace} * -1) 0 whitesmoke

      .title
        .name
          position: relative

      &::after
        content: ""
        background-color: slategray
        position: absolute
        bottom: 0.29rem
        left: -1rem
        top: 0.5rem
        width: 0.06cm
        border-right: 3em
  .item
    width: 100%
    .header
      line-height: $header-line-height
      vertical-align: middle
      align-items: baseline
      display: flex
      font-size: 1.1rem
      .place
        font-weight: bold
      .details
        font-size: $details-font-size
        color: $details-color
        font-weight: bold
        &.name
          text-transform: capitalize
        &.location
          font-style: italic
        &.time
          font-style: normal
          margin-left: auto
          color: $time-color
          font-size: $time-font-size
      //  text-align: right
      //  float: right
      .separator
        margin: 0 0.4rem

    .description
      white-space: pre-line

      .summary
        padding-bottom: 0.5rem
        font-size: 1rem

      .item-list
        padding: 0 0 0 1rem
        margin: 0
    &.skills
      .title
        font-weight: bold
        &::after
          content: ": "

  .icon
    margin-right: 0.25em
    height: 1em

.separator
  margin: 0 0.4rem

.flex
  display: flex

@media print
  .wrapper
    margin: 0 auto !important
    border-radius: 0 !important
    &:last-of-type
      margin-bottom: -2px !important

